Made final tweaks to all pages and css

--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="A curated gallery of logo designs, promotional flyers, and web designs by David Ujo, a creative visual strategist.">
+    <meta name="author" content="David Ujo">
+
     <title>artbydavid</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
@@ -35,34 +39,61 @@
     </nav>
 
 
-    
+
+    <main>
+
+        <section id="gallery" class="gallery">
+            <h2>GALLERY</h2>
+            <div class="gallery-grid">
+                <img src="assets/images/artwork-1.png" alt="Mass Appeal promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-2.png" alt="Revolt promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-3.png" alt="Dj Hektik promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-4.png" alt="YNT Empire promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-5.png" alt="Airbove music promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-6.png" alt="Red Money Records promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-7.png" alt="247 Creatives promotional artwork design by David Ujo">
+
+                <img src="assets/images/artwork-8.png" alt="Medianet promotional artwork design by David Ujo">
+
+                <img src="assets/images/logo1.png" alt="logodesign1 promotional artwork design by David Ujo">
+
+                <img src="assets/images/logo2.png" alt="logodesign2 promotional artwork design by David Ujo">
+
+                <img src="assets/images/logo3.png" alt="logodesign3 promotional artwork design by David Ujo">
+
+                <img src="assets/images/logo4.png" alt="logodesign4 promotional artwork design by David Ujo">
+
+                <img src="assets/images/flyer1.png" alt="flyer design1 promotional artwork design by David Ujo">
 
 
-    <section id="gallery" class="gallery">
-        <h2>GALLERY</h2>
-        <div class="gallery-grid">
-            <img src="assets/images/artwork-1.png" alt="Mass Appeal">
-            <img src="assets/images/artwork-2.png" alt="Revolt">
-            <img src="assets/images/artwork-3.png" alt="Dj Hektik">
-            <img src="assets/images/artwork-4.png" alt="YNT Empire">
-            <img src="assets/images/artwork-5.png" alt="Airbove music">
-            <img src="assets/images/artwork-6.png" alt="Red Money Records">
-            <img src="assets/images/artwork-7.png" alt="247 Creatives">
-            <img src="assets/images/artwork-8.png" alt="Medianet">
-            <img src="assets/images/logo1.png" alt="logodesign1">
-            <img src="assets/images/logo2.png" alt="logodesign2">
-            <img src="assets/images/logo3.png" alt="logodesign3">
-            <img src="assets/images/logo4.png" alt="logodesign4">
-            <img src="assets/images/flyer1.png" alt="flyer design1">
-            <img src="assets/images/flyer2.png" alt="flyer design2">
-            <img src="assets/images/flyer3.png" alt="flyer design3">
-            <img src="assets/images/website-1.jpg" alt="web design1">
-            <img src="assets/images/website-2.jpg" alt="web design2">
-            <img src="assets/images/website-3.jpg" alt="web design3">
-            <img src="assets/images/website-4.jpg" alt="web design4">
-            <img src="assets/images/website-5.jpg" alt="web design5">
-        </div>
-    </section>
+                <img src="assets/images/flyer2.png" alt="flyer design2 promotional artwork design by David Ujo">
+
+                <img src="assets/images/flyer3.png" alt="flyer design3 promotional artwork design by David Ujo">
+
+                <img src="assets/images/website-1.jpg" alt="web design1 promotional artwork design by David Ujo">
+
+                <img src="assets/images/website-2.jpg" alt="web design2 promotional artwork design by David Ujo">
+
+                <img src="assets/images/website-3.jpg" alt="web design3 promotional artwork design by David Ujo">
+
+                <img src="assets/images/website-4.jpg" alt="web design4 promotional artwork design by David Ujo">
+
+                <img src="assets/images/website-5.jpg" alt="web design5 promotional artwork design by David Ujo">
+            </div>
+        </section>
+
+    </main>
+
+
+    <footer>
+        <p>&copy; 2025 David Ujo. All rights reserved.</p>
+    </footer>
 
 
 
