--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="David Ujo is a creative visual strategist and graphic designer with over 9 years of experience in branding, design, and visual identity.">
+    <meta name="author" content="David Ujo">
+
     <title>artbydavid</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +31,7 @@
         <img class="logo" src="assets/images/artbydavid-logo.png" alt="artbydavidlogo">
     </header>
 
-    <nav>
+    <nav aria-label="Main Navigation">
         <a href="#home">HOME</a>
         <a href="#about">ABOUT</a>
         <a href="#skills">SKILLS</a>
@@ -41,97 +43,104 @@
 
     <!-- ABOUT -->
 
+    <main>
 
-    <div id="about" class="profile">
-        <img src="assets/images/David-photo.png" alt="David Ujo">
-        <h1>David Ujo</h1>
-        <h2>Creative Visual Strategist</h2>
-        <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable visuals
-            that help businesses connect with their audience and turn ideas into professional, impactful designs.</p>
-    </div>
-
-    <!-- SKILLS -->
-
-    <section id="skills" class="skills">
-        <h2>SKILLS</h2>
-        <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:</p>
-        <img src="assets/images/PS-logo.png" alt="Photoshop">
-        <img src="assets/images/Illustrator-logo.png" alt="Illustrator">
-        <img src="assets/images/Figma-logo.png" alt="Figma">
-    </section>
-
-    <!-- ACCOMPLISHMENTS -->
-
-    <section id="accomplishments" class="accomplishments">
-        <h2>ACCOMPLISHMENTS</h2>
-        <p>My design journey across leading brands and creative studios. Here's
-            where I've made an impact.</p>
-        <table>
-            <tr>
-                <th>Studio/Employer</th>
-                <th>Role</th>
-                <th>Timeline</th>
-            </tr>
-            <tr>
-                <td>Aesthetic Alliance / Kyiv</td>
-                <td>Principal Visual Designer</td>
-                <td>2018 - 2021</td>
-            </tr>
-            <tr>
-                <td>Designory Collective / Kyiv</td>
-                <td>Digital Art Director</td>
-                <td>2016 - 2018</td>
-            </tr>
-            <tr>
-                <td>Ink & Pixels Studio / Kyiv</td>
-                <td>Senior Graphic Artist</td>
-                <td>2014 - 2016</td>
-            </tr>
-            <tr>
-                <td>Type & Image Co. / Kyiv</td>
-                <td>Design Associate</td>
-                <td>2012 - 2014</td>
-            </tr>
-        </table>
-    </section>
-
-    <!-- CLIENTS -->
-
-    <section id="clients" class="clients">
-        <h2>CLIENTS</h2>
-        <p>From startups to established name - these are the brands I've brought to life through design:</p>
-        <div>
-            <img src="assets/images/massappeal-logo.png" alt="Mass Appeal">
-            <img src="assets/images/revolt-logo.png" alt="Revolt">
-            <img src="assets/images/Djhektik-logo.png" alt="Dj Hektik">
-            <img src="assets/images/yntempire-logo.png" alt="YNT Empire">
-            <img src="assets/images/airbove-music-logo.png" alt="Airbove music">
-            <img src="assets/images/redmoney-logo.png" alt="Red Money Records">
-            <img src="assets/images/247-logo.png" alt="247 Creatives">
-            <img src="assets/images/medianet-logo.png" alt="Medianet">
-            <img src="assets/images/smarthiphop-logo.png" alt="Smart Hiphop">
+        <div id="about" class="profile">
+            <img src="assets/images/David-photo.png" alt="Art by David logo">
+            <h1>David Ujo</h1>
+            <h2>Creative Visual Strategist</h2>
+            <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable
+                visuals
+                that help businesses connect with their audience and turn ideas into professional, impactful designs.
+            </p>
         </div>
-    </section>
 
-    <!-- QUOTE -->
+        <!-- SKILLS -->
 
-    <div id="gallery" class="quote">
-        "Simplicity is the ultimate sophistication"
-        <br><span>- Leonardo da Vinci</span>
-    </div>
+        <section id="skills" class="skills">
+            <h2>SKILLS</h2>
+            <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:
+            </p>
+            <img src="assets/images/PS-logo.png" alt="Photoshop">
+            <img src="assets/images/Illustrator-logo.png" alt="Illustrator">
+            <img src="assets/images/Figma-logo.png" alt="Figma">
+        </section>
 
-    <!-- CONTACT -->
+        <!-- ACCOMPLISHMENTS -->
 
-    <section id="contact" class="contact">
-        <h2>CONTACT</h2>
-        <form>
-            <input type="text" name="name" placeholder="Name" aria-label="name">
-            <input type="email" name="email" placeholder="E-Mail" aria-label="email">
-            <input type="text" name="number" placeholder="Number" aria-label="number">
-            <textarea name="message" rows="4" placeholder="Your message here!" aria-label="message"></textarea>
-            <button type="submit">SEND</button>
-        </form>
-    </section>
+        <section id="accomplishments" class="accomplishments">
+            <h2>ACCOMPLISHMENTS</h2>
+            <p>My design journey across leading brands and creative studios. Here's
+                where I've made an impact.</p>
+            <table>
+                <tr>
+                    <th>Studio/Employer</th>
+                    <th>Role</th>
+                    <th>Timeline</th>
+                </tr>
+                <tr>
+                    <td>Aesthetic Alliance / Kyiv</td>
+                    <td>Principal Visual Designer</td>
+                    <td>2018 - 2021</td>
+                </tr>
+                <tr>
+                    <td>Designory Collective / Kyiv</td>
+                    <td>Digital Art Director</td>
+                    <td>2016 - 2018</td>
+                </tr>
+                <tr>
+                    <td>Ink & Pixels Studio / Kyiv</td>
+                    <td>Senior Graphic Artist</td>
+                    <td>2014 - 2016</td>
+                </tr>
+                <tr>
+                    <td>Type & Image Co. / Kyiv</td>
+                    <td>Design Associate</td>
+                    <td>2012 - 2014</td>
+                </tr>
+            </table>
+        </section>
+
+        <!-- CLIENTS -->
+
+        <section id="clients" class="clients">
+            <h2>CLIENTS</h2>
+            <p>From startups to established names - these are the brands I've brought to life through design:</p>
+            <div>
+                <img src="assets/images/massappeal-logo.png" alt="Mass Appeal">
+                <img src="assets/images/revolt-logo.png" alt="Revolt">
+                <img src="assets/images/Djhektik-logo.png" alt="Dj Hektik">
+                <img src="assets/images/yntempire-logo.png" alt="YNT Empire">
+                <img src="assets/images/airbove-music-logo.png" alt="Airbove music">
+                <img src="assets/images/redmoney-logo.png" alt="Red Money Records">
+                <img src="assets/images/247-logo.png" alt="247 Creatives">
+                <img src="assets/images/medianet-logo.png" alt="Medianet">
+                <img src="assets/images/smarthiphop-logo.png" alt="Smart Hiphop">
+            </div>
+        </section>
+
+        <!-- QUOTE -->
+
+        <div id="gallery" class="quote">
+            "Simplicity is the ultimate sophistication"
+            <br><span>- Leonardo da Vinci</span>
+        </div>
+
+        <!-- CONTACT -->
+
+        <section id="contact" class="contact">
+            <h2>CONTACT</h2>
+            <form>
+                <label for="name" class="sr-only">Name</label>
+                <input type="text" name="name" id="name" placeholder="Name" aria-label="name">
+                <input type="email" name="email" placeholder="E-Mail" aria-label="email">
+                <input type="text" name="number" placeholder="Number" aria-label="number">
+                <textarea name="message" rows="4" placeholder="Your message here!" aria-label="message"></textarea>
+                <button type="submit">SEND</button>
+            </form>
+        </section>
+
+    </main>
 
     <!-- FOOTER -->
 
