--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
         <section id="contact" class="contact">
             <h2>CONTACT</h2>
-            <form>
+            <form action="https://formsubmit.co/el/fabavi" method="POST">
                 <label for="name" class="sr-only">Name</label>
-                <input type="text" name="name" id="name" placeholder="Name" aria-label="name">
-                <input type="email" name="email" placeholder="E-Mail" aria-label="email">
+                <input type="text" name="name" id="name" placeholder="Your Name" aria-label="name" required>
+                <input type="email" name="email" placeholder="Your EMail" aria-label="email" required>
                 <input type="text" name="number" placeholder="Number" aria-label="number">
-                <textarea name="message" rows="4" placeholder="Your message here!" aria-label="message"></textarea>
+                <textarea name="message" rows="4" placeholder="Your Message" aria-label="message" required></textarea>
                 <button type="submit">SEND</button>
             </form>
         </section>
